--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h1 {
+h1, h2 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -26,10 +26,10 @@ ul {
     margin-right: 20px;
 }
 
-.list-description{
+.list-description {
     width: 310px;
-    min-height: 140px;
-    border: 1px solid lightgray;
+    height: 150px;
+    border: 1px solid rgb(10, 9, 9);
     padding: 8px 8px;
     margin: 10px;
     font-size: 16px;
@@ -38,6 +38,7 @@ ul {
 
     &:nth-child(2n) {
         background-color: rgb(128, 149, 155);
+        border: 1px solid rgb(78, 4, 45);
     }
 }
 
@@ -72,8 +73,8 @@ ul {
 
 .viseVersaColor {
     width: 310px;
-    min-height: 140px;
-    border: 1px solid lightgray;
+    height: 150px;
+    border: 1px solid rgb(78, 4, 45);
     padding: 8px 8px;
     margin: 10px;
     font-size: 16px;
@@ -82,5 +83,56 @@ ul {
 
     &:nth-child(2n) {
         background-color: rgb(226, 184, 236);
+        border: 1px solid rgb(10, 9, 9);
+    }
+}
+
+.canvas-list {
+    display: flex;
+    justify-content: center;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+}
+
+.canvas-container {
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.box-color {
+    width: 350px;
+    min-height: 140px;
+    border: 1px solid rgb(4, 107, 64);
+    padding-left: 4px;
+    padding-right: 12px;
+    margin: 10px;
+    font-size: 16px;
+    background-color: rgb(10, 196, 25);
+    border-radius: 14px;
+
+    &:nth-child(2n) {
+        background-color: rgb(187, 17, 25);
+        border: 1px solid rgb(65, 25, 2);
+    }
+}
+
+.changeCanvasColor {
+    width: 350px;
+    min-height: 140px;
+    border: 1px solid rgb(4, 107, 64);
+    padding-left: 4px;
+    padding-right: 12px;
+    margin: 10px;
+    font-size: 16px;
+    background-color: rgb(2, 54, 6);
+    border-radius: 14px;
+    transition: background-color 750ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:nth-child(2n) {
+        background-color: rgb(48, 3, 5);
+        border: 1px solid rgb(65, 25, 2);
+        transition: background-color 750ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
