--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
-h1, h2 {
+body {
+    background-color: rgb(241, 184, 98);
+}
+
+
+h1, h2, h3 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    padding-top: 50px;
+    padding-bottom: 10px;
 }
 
 ul {
@@ -17,6 +24,7 @@ ul {
 .main-div {
     margin-left: 20px;
     margin-right: 20px;
+    background-color: rgb(179, 110, 245);
 }
 
 .main-list {
@@ -87,18 +95,17 @@ ul {
     }
 }
 
+
+
+.canvas-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgb(179, 110, 245);
+}
+
 .canvas-list {
     display: flex;
     justify-content: center;
-    /* margin-left: 20px;
-    margin-right: 20px; */
-}
-
-.canvas-container {
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
 .box-color {
@@ -135,4 +142,23 @@ ul {
         border: 1px solid rgb(65, 25, 2);
         transition: background-color 750ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+}
+
+.square-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    background-color: rgb(179, 110, 245);
+}
+
+.square-box {
+    margin-bottom: 10px;
+    width: 450px;
+    height: 240px;
+    border: 1px solid rgb(32, 2, 82);
+    padding-left: 4px;
+    padding-right: 12px;
+    font-size: 16px;
+    background-color: rgb(71, 179, 230);
+    border-radius: 14px;
 }
