--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ ul {
     margin-top: 20px;
     width: 100%;
     justify-content: center;
+    align-items: center;
 }
 
 .onclick-button {
@@ -158,7 +159,37 @@ ul {
     border: 1px solid rgb(32, 2, 82);
     padding-left: 4px;
     padding-right: 12px;
-    font-size: 16px;
-    background-color: rgb(71, 179, 230);
+    background-color: rgb(14, 114, 160);
     border-radius: 14px;
+}
+
+.square-button {
+    width: 70px;
+    height: 35px;
+    padding: 3px;
+    margin-right: 20px;
+}
+
+.square-button:hover,
+.square-button:focus {
+    cursor: pointer;
+}
+
+.button-square-box {
+    padding-bottom: 30px;
+}
+
+.range-button:hover,
+.range-button:focus {
+    cursor: pointer;
+}
+
+.draw-box {
+    /* margin-bottom: 10px;
+    width: 450px;
+    height: 240px; */
+    border: 1px solid rgb(32, 2, 82);
+    /* padding-left: 4px;
+    padding-right: 12px;
+    background-color: white; */
 }
