--- a/css/style.css
+++ b/css/style.css
@@ -185,11 +185,11 @@ ul {
 }
 
 .draw-box {
-    /* margin-bottom: 10px;
-    width: 450px;
+    margin-bottom: 10px;
+    /* width: 450px;
     height: 240px; */
     border: 1px solid rgb(32, 2, 82);
-    /* padding-left: 4px;
+    padding-left: 4px;
     padding-right: 12px;
-    background-color: white; */
+    background-color: white;
 }
