--- a/css/style.css
+++ b/css/style.css
@@ -186,10 +186,40 @@ ul {
 
 .draw-box {
     margin-bottom: 10px;
-    /* width: 450px;
-    height: 240px; */
     border: 1px solid rgb(32, 2, 82);
-    padding-left: 4px;
-    padding-right: 12px;
     background-color: white;
+}
+
+.box-draw-options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.paragraph-draw-options {
+    margin-right: 15px;
+}
+.input-set {
+    border-radius: 4px;
+    border: 1px solid grey;
+    height: 25px;
+    padding: 5px;
+}
+
+.input-set:hover,
+.input-set:focus {
+    outline: 0;
+    border-style: none;
+    border: 1px solid black;
+}
+
+.options-button {
+    width: 70px;
+    height: 35px;
+    padding: 3px;
+}
+
+.options-button:hover,
+.options-button:focus {
+    cursor: pointer;
 }
